--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
     <title>Tradutor de Texto para Morse</title>
     <link href='https://fonts.googleapis.com/css?family=JetBrains Mono' rel='stylesheet'>
     <style>
-        @keyframes typing{
-            from{
+        @keyframes typing {
+            from {
                 width: 0;
-
             }
         }
-        @keyframes blinking{
-            50%{
+        @keyframes blinking {
+            50% {
                 border-color: transparent;
             }
         }
-        h1{
+        h1 {
             color: white;
             border-right: 4px solid;
             width: 28ch;
@@ -25,8 +24,9 @@
             white-space: nowrap;
             animation: typing 3s steps(28), blinking 0.5s infinite step-end alternate;
         }
-        body{
-            font-family: 'JetBrains Mono';font-size: 22px;
+        body {
+            font-family: 'JetBrains Mono';
+            font-size: 22px;
             background-color: black;
         }
         input[type="text"] {
@@ -34,14 +34,23 @@
             height: 300px;
             border-radius: 3px;
             padding: 10px;
-            font-size: 18px; 
+            font-size: 18px;
         }
         input[type="button"] {
-            width: auto; 
+            width: auto;
             height: auto;
             display: block;
             margin: 20px auto 0;
             font-size: 18px;
+        }
+        a {
+            color: white;
+            font-size: 14px;
+            position: fixed;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            text-align: center;
         }
     </style>
 </head>
@@ -56,6 +65,7 @@
             </form>
         </div>
     </center>
-    <script src="traduzir.js"></script> 
+    <a href="https://github.com/ZeGuilherme1">made by Zé :D - 2024</a>
+    <script src="traduzir.js"></script>
 </body>
 </html>
